# prove-agent

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
configs/: default.yaml
docs/: diagram_sources.json  log.md  prove_explainer.html
evals/: __init__.py  ablation.py  ablation_curves.py  attribution_matrix.py  fake_skills.py  plots.py  real_data.py
evals/live_results/: A3_live_metrics.jsonl  A3_live_summary.json  A3_strong_metrics.jsonl  A3_strong_summary.json  A3_weak_metrics.jsonl  A3_weak_rule6_metrics.jsonl  A3_weak_rule6_summary.json  A3_weak_summary.json  A3_weak_xverify_metrics.jsonl  A3_weak_xverify_summary.json  README.md
evals/scenarios/: .gitkeep
project_media/: README.md  build_video.py  capture_terminal.py  live_demo.py  script.py
project_media/terminal/: live_demo.json  live_demo.txt
scenarios/: architecture_diagram.py  board_diagram.py  compound_demo.py  drift_demo.py  mermaid_render.py  routing_noise_demo.py
src/prove/: __init__.py  admission.py  attribution.py  audit.py  config.py  extraction_agent.py  layout.py  llm_client.py  monitor.py  pipeline.py  registry.py  router.py  sample_pool.py  sandbox.py  schemas.py  service.py  synthesis_agent.py  traces.py  validator.py
tests/: __init__.py  test_admission.py  test_cord_adapter.py  test_input_noise.py  test_llm_client.py  test_monitor.py  test_phase2_loop.py  test_phase3_drift.py  test_phase4_attribution.py  test_phase4_compound.py  test_phase4_routing_noise.py  test_pipeline.py  test_registry.py  test_router.py  test_sandbox.py  test_service.py  test_synthesis.py  test_validator.py  test_verification_fixes.py
(+49 files in other folders)
